<resources>
    <string name="app_name">番茄清单</string>
    <!--item-->
    <string name="TomatoClock">番茄钟</string>
    <string name="StudyRoom">自习室</string>
    <string name="TreeHole">树洞</string>
    <string name="about">关于我们</string>
    <string name="loginOut">退出登录</string>
    <string name="note">记事簿</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="PersonName">请输入账号</string>
    <string name="PassWord">请输入密码</string>
    <string name="login">登录</string>
    <string name="zhuce">注册</string>
    <string name="mid">|</string>
    <string name="forget_password">忘记密码</string>
    <string name="quick_register">快速注册</string>
    <string name="TODO">TODO</string>

    <string name="USER_DZ">dzcount</string>
    <string name="USER_PHONE">userphone</string>
    <string name="PASSWORD">password</string>
    <string name="USER_NAME">username</string>
    <string name="OUT_IN">USER</string>
    <string name="USER_STUDY_TIME">studytimecount</string>
    <string name="USER_IMG">userimg</string>


    <!--关于我们-->
    <string name="info_version">%1$s v%2$s</string>
    <string name="info_description">
        "轻番茄, 简单易用的番茄时钟, 是一款基于「番茄工作法」的辅助应用。"
        "如果遵循番茄工作法，使用纸笔来制作今日待办、活动清单和记录，"
        "需要的仅仅是手机上的一款计时器App，相信轻番茄是您最好的选择。"
        "开启一个番茄钟，给自己 25 分钟的专注时间，战胜拖延，进入心流，让学习和工作更有效率!"
    </string>
    <string name="info_about_title">关于</string>
    <string name="info_contact_us">联系方式</string>
    <string name="info_email_title">邮箱</string>
    <string name="info_email">594064930@qq.com</string>
    <string name="info_github_title">Github</string>
    <string name="info_github">https://github.com/uniquehuang</string>
    <string name="info_website_title">博客</string>
    <string name="info_site">https://blog.csdn.net/weixin_51964627</string>
</resources>